tests/ui-fail/constant.rs
use non_zero::non_zero;

const _: std::num::NonZero<u8> = non_zero!(0);
const _: std::num::NonZero<u16> = non_zero!(0);
const _: std::num::NonZero<u32> = non_zero!(0);
const _: std::num::NonZero<u64> = non_zero!(0);
const _: std::num::NonZero<usize> = non_zero!(0);
const _: std::num::NonZero<i8> = non_zero!(0);
const _: std::num::NonZero<i16> = non_zero!(0);
const _: std::num::NonZero<i32> = non_zero!(0);
const _: std::num::NonZero<i64> = non_zero!(0);
const _: std::num::NonZero<isize> = non_zero!(0);

fn main() {}
